--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSSpeechRecognitionUsageDescription</key>
+    <string>Recognize and display speech input</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Detect speech input</string>
 </dict>
 </plist>
