--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   http: ^0.13.4
+  speech_to_text: ^5.4.3
+  avatar_glow: ^2.0.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
