--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.4
   speech_to_text: ^5.4.3
   avatar_glow: ^2.0.2
+  flutter_tts: ^3.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
